--- a/.github/workflows/security-change.yml
+++ b/.github/workflows/security-change.yml
@@ -324,7 +324,7 @@ jobs:
     postdeploy:
         #if: github.event.pull_request.merged == true
         name: Post Deploy
-        needs: deploy
+        needs: scan
         runs-on: ubuntu-latest
         steps:
             - name: Run deployment scripts
