--- a/.github/workflows/snow-custom-tasks-workflow.yml
+++ b/.github/workflows/snow-custom-tasks-workflow.yml
@@ -101,10 +101,8 @@ jobs:
                   SONAR_ORG_KEY: ${{ secrets.SONAR_ORG_KEY }}
 
             - name: ServiceNow DevOps Sonar Scan Results
-            # You may pin to the exact commit or the version.
-            # uses: ServiceNow/servicenow-devops-sonar@0ed32c6471c8191f264d4bd464f14c858032354a
-            # uses: ServiceNow/servicenow-devops-sonar@v1.34.2      
-              uses: ServiceNow/servicenow-devops-sonar@main
+            # You may pin to the exact commit or the version.     
+              uses: ServiceNow/servicenow-devops-sonar@v2.0.0
               with:
                   # ServiceNow Instance URL
                   instance-url: ${{ secrets.SN_INSTANCE_URL }}
@@ -128,9 +126,7 @@ jobs:
 
             - name: ServiceNow DevOps Unit Test Results
             # You may pin to the exact commit or the version.
-            # uses: ServiceNow/servicenow-devops-test-report@6c7ef85f6aedfb7ab17e4d17c52c14c5f2f455fd
-              uses: ServiceNow/servicenow-devops-test-report@main
-            # uses: ServiceNow/servicenow-devops-test-report@main
+              uses: ServiceNow/servicenow-devops-test-report@v2.0.0
               with:
                   # Devops Integration User Name
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
@@ -163,7 +159,7 @@ jobs:
 #                   scantimeout: 20
 
             - name: ServiceNow DevOps Security Results
-              uses: ServiceNow/servicenow-devops-security-result@main
+              uses: ServiceNow/servicenow-devops-security-result@v2.0.0
               with:
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
                   devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
@@ -181,10 +177,8 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: ServiceNow DevOps Register Artifact
-            # You may pin to the exact commit or the version.
-            # uses: ServiceNow/servicenow-devops-register-artifact@6312802fd9eecd4a57b13216e968b8cae4ff6fe4
-            # uses: ServiceNow/servicenow-devops-register-artifact@v1.34.2            
-              uses: ServiceNow/servicenow-devops-register-artifact@main
+            # You may pin to the exact commit or the version.          
+              uses: ServiceNow/servicenow-devops-register-artifact@v2.0.0
               with:
                   # Devops Integration User Name
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
@@ -221,10 +215,8 @@ jobs:
                   ]'
 
             - name: ServiceNow DevOps Register Package
-            # You may pin to the exact commit or the version.
-            # uses: ServiceNow/servicenow-devops-register-package@96a351e6f06e592011b9bdd7da5b2af26506d86b
-            # uses: ServiceNow/servicenow-devops-register-package@v1.34.2            
-              uses: ServiceNow/servicenow-devops-register-package@main
+            # You may pin to the exact commit or the version.           
+              uses: ServiceNow/servicenow-devops-register-package@v2.0.0
               with:
                   # ServiceNow Devops Integration User Name
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
@@ -269,10 +261,8 @@ jobs:
         runs-on: ubuntu-latest
         steps:     
             - name: ServiceNow DevOps Change Automation
-            # You may pin to the exact commit or the version.
-            # uses: ServiceNow/servicenow-devops-change@0f57435999463cc1dea44bde4f5eca9879474b85
-            # uses: ServiceNow/servicenow-devops-change@main            
-              uses: ServiceNow/servicenow-devops-change@main
+            # You may pin to the exact commit or the version.            
+              uses: ServiceNow/servicenow-devops-change@v2.0.0
               with:
                   # ServiceNow Instance URL
                   instance-url: ${{ secrets.SN_INSTANCE_URL }}
