--- a/.github/workflows/snow-custom-tasks-workflow.yml
+++ b/.github/workflows/snow-custom-tasks-workflow.yml
@@ -102,7 +102,7 @@ jobs:
 
             - name: ServiceNow DevOps Sonar Scan Results
             # You may pin to the exact commit or the version.     
-              uses: ServiceNow/servicenow-devops-sonar@v2
+              uses: ServiceNow/servicenow-devops-sonar@2
               with:
                   # ServiceNow Instance URL
                   instance-url: ${{ secrets.SN_INSTANCE_URL }}
@@ -126,7 +126,7 @@ jobs:
 
             - name: ServiceNow DevOps Unit Test Results
             # You may pin to the exact commit or the version.
-              uses: ServiceNow/servicenow-devops-test-report@v2
+              uses: ServiceNow/servicenow-devops-test-report@2
               with:
                   # Devops Integration User Name
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
@@ -159,7 +159,7 @@ jobs:
 #                   scantimeout: 20
 
             - name: ServiceNow DevOps Security Results
-              uses: ServiceNow/servicenow-devops-security-result@v2
+              uses: ServiceNow/servicenow-devops-security-result@2
               with:
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
                   devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
@@ -178,7 +178,7 @@ jobs:
         steps:
             - name: ServiceNow DevOps Register Artifact
             # You may pin to the exact commit or the version.          
-              uses: ServiceNow/servicenow-devops-register-artifact@v2
+              uses: ServiceNow/servicenow-devops-register-artifact@2
               with:
                   # Devops Integration User Name
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
@@ -216,7 +216,7 @@ jobs:
 
             - name: ServiceNow DevOps Register Package
             # You may pin to the exact commit or the version.           
-              uses: ServiceNow/servicenow-devops-register-package@v2
+              uses: ServiceNow/servicenow-devops-register-package@2
               with:
                   # ServiceNow Devops Integration User Name
                   devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
@@ -262,7 +262,7 @@ jobs:
         steps:     
             - name: ServiceNow DevOps Change Automation
             # You may pin to the exact commit or the version.            
-              uses: ServiceNow/servicenow-devops-change@v2
+              uses: ServiceNow/servicenow-devops-change@2
               with:
                   # ServiceNow Instance URL
                   instance-url: ${{ secrets.SN_INSTANCE_URL }}
