--- a/azure-build-pipeline1.yml
+++ b/azure-build-pipeline1.yml
@@ -59,7 +59,7 @@ stages:
                 echo 'Hello world'
           - task: ServiceNow-DevOps-Agent-Artifact-Registration@1
             inputs:
-              connectedServiceName: 'devopstokyonightly2-Basic Project1-ServiceNow DevOps Service Connection'
+              connectedServiceName: 'devopsqerama92-Basic Project1-ServiceNow DevOps Service Connection'
               artifactsPayload: |
                 {
                     "artifacts":
@@ -74,7 +74,7 @@ stages:
                 }
           - task: ServiceNow-DevOps-Agent-Package-Registration@1
             inputs:
-              connectedServiceName: 'devopstokyonightly2-Basic Project1-ServiceNow DevOps Service Connection'
+              connectedServiceName: 'devopsqerama92-Basic Project1-ServiceNow DevOps Service Connection'
               packageName: 'package-devops-3.0.0-SNAPSHOT.zip'
               artifactsPayload: |
                 {
@@ -102,7 +102,7 @@ stages:
         steps:
           - task: ServiceNow-DevOps-Server-Change-Acceleration@1
             inputs:
-              connectedServiceName: 'devopstokyonightly2-Basic Project1-ServiceNow DevOps Service Connection'
+              connectedServiceName: 'devopsqerama92-Basic Project1-ServiceNow DevOps Service Connection'
               UpstreamJob: 'Job_Deploy'
               changeRequestDetails: |
                 {
@@ -115,5 +115,6 @@ stages:
                     "priority": "2",
                     "start_date": "2022-01-05 11:59:59",
                     "end_date": "2022-01-08 11:59:59"
+                    "chg_model": {"name": "devops"}
                     }
                 }
