--- a/.github/workflows/Riya-workflow.yml
+++ b/.github/workflows/Riya-workflow.yml
@@ -27,7 +27,7 @@ jobs:
         steps:     
             - name: ServiceNow DevOps Change Automation
             # You may pin to the exact commit or the version.            
-              uses: ServiceNow/servicenow-devops-change@main
+              uses: ServiceNow/servicenow-devops-change@v2.0.0
               with:
                   # ServiceNow Instance URL
                   instance-url: ${{ secrets.SN_INSTANCE_URL }}
