--- a/.github/workflows/Riya-workflow.yml
+++ b/.github/workflows/Riya-workflow.yml
@@ -46,4 +46,15 @@ jobs:
                   # The time in seconds to wait between trying the API.
                   interval: 100 # optional, default is 100
                   # The customized inputs to create change with the requested details
-                  change-request: '{ "attributes": {"type": "normal", "template": "8935759bc36cf910f11d3641150131f8"}}'
+                  change-request: '{
+                      "setCloseCode": "true",
+                      "attributes": {
+                          "short_description": "Automated Software Deployment",
+                          "description": "Automated Software Deployment.",
+                          "assignment_group": "a715cd759f2002002920bde8132e7018",
+                          "implementation_plan": "Software update is tested and results can be found in Test Summaries Tab.",
+                          "backout_plan": "When software fails in production, the previous software release will be re-deployed.",
+                          "test_plan": "Testing if the software was successfully deployed",
+                          "chg_model": {"name": "devops"}
+                      }
+                  }'
