--- a/.github/workflows/Riya-workflow.yml
+++ b/.github/workflows/Riya-workflow.yml
@@ -48,12 +48,7 @@ jobs:
                   # The customized inputs to create change with the requested details
                   change-request: '{
                       "attributes": {
-                          "short_description": "Automated Software Deployment",
-                          "description": "Automated Software Deployment.",
-                          "assignment_group": "a715cd759f2002002920bde8132e7018",
-                          "implementation_plan": "Software update is tested and results can be found in Test Summaries Tab.",
-                          "backout_plan": "When software fails in production, the previous software release will be re-deployed.",
-                          "test_plan": "Testing if the software was successfully deployed",
-                          "chg_model": {"name": "devops"}
+                          "type": "normal",
+                          "template": "1c8e02ec47410200e90d87e8dee49057"
                       }
                   }'
