--- a/.github/workflows/snow-custom-tasks-workflow.yml
+++ b/.github/workflows/snow-custom-tasks-workflow.yml
@@ -61,23 +61,23 @@ jobs:
               with:
                   fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 
-            - name: List current directory
-              run: ls -a
+            # - name: List current directory
+            #   run: ls -a
 
-            - name: Run Tests with Maven
-              run: mvn -B test --file pom.xml
+            # - name: Run Tests with Maven
+            #   run: mvn -B test --file pom.xml
 
-            # run: |
-            #       ls -l
-            # mvn clean test
+            # # run: |
+            # #       ls -l
+            # # mvn clean test
 
-            # run: mvn test
-            # mvn -B test --file ./devops-test-repo/pom.xml
+            # # run: mvn test
+            # # mvn -B test --file ./devops-test-repo/pom.xml
 
-            - name: What's in the target directory
-              run: |
-                    cd target
-                    ls -a
+            # - name: What's in the target directory
+            #   run: |
+            #         cd target
+            #         ls -a
 
             # - name: Sonarcloud Scan
             #  env:
@@ -85,66 +85,66 @@ jobs:
             #      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
             #  run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=devops-test-repo
 
-            - name: Sonar Cloud Analysis
-              if: success() # always() failure() success()
-              run: >
-                  mvn -B verify -DskipTests sonar:sonar
-                  -Dsonar.projectKey=$SONAR_PROJECT_KEY
-                  -Dsonar.organization=$SONAR_ORG_KEY
-                  -Dsonar.host.url=$SONAR_URL
-                  -Dsonar.login=$SONAR_TOKEN
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GHP_TOKEN }}
-                  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-                  SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
-                  SONAR_URL: ${{ secrets.SONAR_URL }}
-                  SONAR_ORG_KEY: ${{ secrets.SONAR_ORG_KEY }}
+            # - name: Sonar Cloud Analysis
+            #   if: success() # always() failure() success()
+            #   run: >
+            #       mvn -B verify -DskipTests sonar:sonar
+            #       -Dsonar.projectKey=$SONAR_PROJECT_KEY
+            #       -Dsonar.organization=$SONAR_ORG_KEY
+            #       -Dsonar.host.url=$SONAR_URL
+            #       -Dsonar.login=$SONAR_TOKEN
+            #   env:
+            #       GITHUB_TOKEN: ${{ secrets.GHP_TOKEN }}
+            #       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+            #       SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+            #       SONAR_URL: ${{ secrets.SONAR_URL }}
+            #       SONAR_ORG_KEY: ${{ secrets.SONAR_ORG_KEY }}
 
-            - name: ServiceNow DevOps Sonar Scan Results
-            # You may pin to the exact commit or the version.     
-              uses: ServiceNow/servicenow-devops-sonar@v2.0.0
-              with:
-                  # ServiceNow Instance URL
-                  instance-url: ${{ secrets.SN_INSTANCE_URL }}
-                  # Devops Integration User Name
-                  devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
-                  # Devops Integration User Password
-                  devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
-                  # Orchestration Tool Id
-                  tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-                  # Github Context
-                  context-github: ${{ toJSON(github) }}
-                  # Display Name of the Job
-                  job-name: 'Test'
-                  # Sonar Host URL
-                  sonar-host-url: ${{ secrets.SONAR_URL }}
-                  # Sonar Project Key
-                  sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
+            # - name: ServiceNow DevOps Sonar Scan Results
+            # # You may pin to the exact commit or the version.     
+            #   uses: ServiceNow/servicenow-devops-sonar@v2.0.0
+            #   with:
+            #       # ServiceNow Instance URL
+            #       instance-url: ${{ secrets.SN_INSTANCE_URL }}
+            #       # Devops Integration User Name
+            #       devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
+            #       # Devops Integration User Password
+            #       devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
+            #       # Orchestration Tool Id
+            #       tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+            #       # Github Context
+            #       context-github: ${{ toJSON(github) }}
+            #       # Display Name of the Job
+            #       job-name: 'Test'
+            #       # Sonar Host URL
+            #       sonar-host-url: ${{ secrets.SONAR_URL }}
+            #       # Sonar Project Key
+            #       sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
                   
-            #- name: Run JUnit Tests
-            #  run: mvn test -Dmaven.test.failure.ignore=true surefire-report:report
+            # #- name: Run JUnit Tests
+            # #  run: mvn test -Dmaven.test.failure.ignore=true surefire-report:report
 
-            - name: ServiceNow DevOps Unit Test Results
-            # You may pin to the exact commit or the version.
-              uses: ServiceNow/servicenow-devops-test-report@v2.0.0
-              with:
-                  # Devops Integration User Name
-                  devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
-                  # Devops Integration User Password
-                  devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
-                  # ServiceNow Instance Name
-                  instance-url: ${{ secrets.SN_INSTANCE_URL }}
-                  # Orchestration Tool Id
-                  tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-                  # Job Name
-                  job-name: 'Test' # Should be same name as declared in 'name' clause of the current Stage
-                  # Github Context
-                  context-github: ${{ toJSON(github) }}
-                  # JUnit xml report file name with path
-                  xml-report-filename: target/surefire-reports/testng-results.xml # if only JUnit tests, use target/surefire-reports/testng-results.xml
-                                                                                  # if both JUnit & TestNG tests, use target/surefire-reports/testng-junit-results/testng-results.xml
-                  # GitHub Custom Action
-                  test-type: # optional, default is JUnit
+            # - name: ServiceNow DevOps Unit Test Results
+            # # You may pin to the exact commit or the version.
+            #   uses: ServiceNow/servicenow-devops-test-report@v2.0.0
+            #   with:
+            #       # Devops Integration User Name
+            #       devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
+            #       # Devops Integration User Password
+            #       devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
+            #       # ServiceNow Instance Name
+            #       instance-url: ${{ secrets.SN_INSTANCE_URL }}
+            #       # Orchestration Tool Id
+            #       tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+            #       # Job Name
+            #       job-name: 'Test' # Should be same name as declared in 'name' clause of the current Stage
+            #       # Github Context
+            #       context-github: ${{ toJSON(github) }}
+            #       # JUnit xml report file name with path
+            #       xml-report-filename: target/surefire-reports/testng-results.xml # if only JUnit tests, use target/surefire-reports/testng-results.xml
+            #                                                                       # if both JUnit & TestNG tests, use target/surefire-reports/testng-junit-results/testng-results.xml
+            #       # GitHub Custom Action
+            #       test-type: # optional, default is JUnit
                   
 #             - name: Veracode Upload And Scan
 #               uses: veracode/veracode-uploadandscan-action@0.2.6
