--- a/.github/workflows/common-repo-workflow.yml
+++ b/.github/workflows/common-repo-workflow.yml
@@ -97,26 +97,41 @@ jobs:
     needs: registerArtifact
     runs-on: ubuntu-latest
     steps:
-    - name: ServiceNow DevOps Sonar Scan Results
-    # You may pin to the exact commit or the version.     
-      uses: ServiceNow/servicenow-devops-sonar@v2.0.0
-      with:
-          # ServiceNow Instance URL
-          instance-url: ${{ secrets.SN_INSTANCE_URL }}
-          # Devops Integration User Name
-          devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
-          # Devops Integration User Password
-          devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
-          # Orchestration Tool Id
-          tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
-          # Github Context
-          context-github: ${{ toJSON(github) }}
-          # Display Name of the Job
-          job-name: 'Sonar Scan'
-          # Sonar Host URL
-          sonar-host-url: ${{ secrets.SONAR_URL }}
-          # Sonar Project Key
-          sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
+    - name: Sonar Cloud Analysis
+      if: success() # always() failure() success()
+      run: >
+          mvn -B verify -DskipTests sonar:sonar
+          -Dsonar.projectKey=$SONAR_PROJECT_KEY
+          -Dsonar.organization=$SONAR_ORG_KEY
+          -Dsonar.host.url=$SONAR_URL
+          -Dsonar.login=$SONAR_TOKEN
+      env:
+          GITHUB_TOKEN: ${{ secrets.GHP_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+          SONAR_URL: ${{ secrets.SONAR_URL }}
+          SONAR_ORG_KEY: ${{ secrets.SONAR_ORG_KEY }}
+    
+    # - name: ServiceNow DevOps Sonar Scan Results
+    # # You may pin to the exact commit or the version.     
+    #   uses: ServiceNow/servicenow-devops-sonar@v2.0.0
+    #   with:
+    #       # ServiceNow Instance URL
+    #       instance-url: ${{ secrets.SN_INSTANCE_URL }}
+    #       # Devops Integration User Name
+    #       devops-integration-user-name: ${{ secrets.SN_DEVOPS_USER }}
+    #       # Devops Integration User Password
+    #       devops-integration-user-password: ${{ secrets.SN_DEVOPS_PASSWORD }}
+    #       # Orchestration Tool Id
+    #       tool-id: ${{ secrets.SN_ORCHESTRATION_TOOL_ID }}
+    #       # Github Context
+    #       context-github: ${{ toJSON(github) }}
+    #       # Display Name of the Job
+    #       job-name: 'Sonar Scan'
+    #       # Sonar Host URL
+    #       sonar-host-url: ${{ secrets.SONAR_URL }}
+    #       # Sonar Project Key
+    #       sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
 
   securityScan:
     name: 'Security Scan'
@@ -141,7 +156,7 @@ jobs:
       with:
           appname: 'ServiceNow DevOps App#1'
           createprofile: false
-          filepath: 'target/DevOps-Test-1.39.0-SNAPSHOT.jar'
+          filepath: 'target/*.jar'
           #version: ${{ github.run_id }}-${{ github.run_number }}-${{ github.run_attempt }}
           vid: '${{ secrets.VERACODE_API_ID }}'
           vkey: '${{ secrets.VERACODE_API_KEY }}'
